fix: Update button background color for improved visibility

--- a/SentrySMP.App/wwwroot/style.css
+++ b/SentrySMP.App/wwwroot/style.css
@@ -176,7 +176,7 @@ textarea:focus {
 }
 
 button {
-    background-color: #1d1d1d;
+    background-color: #171717;
     border: none;
     color: white;
     margin: 5px;
